# Mood_Companynion

./: README.md
backend/: Cargo.toml
backend/core/: Cargo.toml
backend/core/src/: config.rs  db.rs  lib.rs  llm.rs  persona.rs  reward.rs  style.rs  ws.rs
backend/src-tauri/: Cargo.toml  tauri.conf.json
backend/src-tauri/src/: main.rs
backend/ui/: index.html
config/: backend.json
data/: mood.db
data/personas/: persona-f6b2700c.json
docs/: phase4-training.md
extension/: background.js  config.js  content.js  manifest.json
extension/adapters/: gemini.js
extension/lib/: crisisPanel.js  tagParser.js  wsClient.js
extension/test/: tagParser.test.js
extension/ui/: panel.css
scripts/: install-cron.sh
training/: README.md  __init__.py  config.py  dataset.py  export_ollama.py  prompts.py  requirements.txt  runlog.py  scheduler.py  train.py  train_dpo.py
